Tons of code cleanup.